[gd_scene load_steps=3 format=2]

[ext_resource path="res://Entities/Player/ScoreModule/ScoreModule.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="ScoreModule" type="Area2D"]
z_index = -5
z_as_relative = false
collision_mask = 8
script = ExtResource( 1 )

[node name="ConnectionArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_ScoreModule_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_ScoreModule_area_exited"]
